--- a/client/src/assets/main.scss
+++ b/client/src/assets/main.scss
@@ -10,6 +10,11 @@ html {
     font-family: 'Roboto', sans-serif;
 }
 
+html, body, #app {
+    height: 100%;
+    margin: 0;
+}
+
 #app {
     font-family: Avenir, Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
