--- a/client/src/assets/main.scss
+++ b/client/src/assets/main.scss
@@ -21,7 +21,6 @@ html, body, #app {
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
     color: #2c3e50;
-    margin-top: 60px;
 }
 
 .unselectable {
@@ -29,4 +28,8 @@ html, body, #app {
 -moz-user-select: none; /* Firefox */
 -ms-user-select: none; /* IE10+/Edge */
 user-select: none; /* Standard */
+}
+
+.pointer {
+    cursor: pointer;
 }
