--- a/client/src/assets/main.scss
+++ b/client/src/assets/main.scss
@@ -6,7 +6,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 html {
-    background: #414141 !important;
+    background: #efefef !important;
     font-family: 'Roboto', sans-serif;
 }
 
