--- a/client/src/assets/main.scss
+++ b/client/src/assets/main.scss
@@ -2,6 +2,7 @@
 
 // Bulma Import
 @import '~bulma';
+@import '~bulma-tooltip';
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
